Bug 1351370 - Don't flush a decoder before shutdown that is not used for decoding at all. r=jya, a=lizzard

The decoder held by MediaFormatReader::DecoderFactory::Data is never used for decoding.
There is no need to flush it before shutdown. This will avoid the hang on Android caused
by flushing a decoder that is not initialized.